--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.8.1",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/google-signin": "^4.0.0",
     "@react-native-community/slider": "^2.0.9",
     "crossroads": "^0.12.2",
@@ -30,10 +32,12 @@
     "react-native-google-maps-directions": "^2.1.1",
     "react-native-image-picker": "^2.3.1",
     "react-native-maps": "0.27.1",
+    "react-native-permissions": "^2.0.10",
     "react-native-push-notification": "^3.1.9",
     "react-native-reanimated": "^1.7.1",
     "react-native-router-flux": "^4.2.0",
     "react-native-screens": "^2.4.0",
+    "react-native-timeline-flatlist": "^0.7.0",
     "react-native-timeline-listview": "^0.2.3",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
