--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "qs": "^6.9.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-android-location-enabler": "^1.1.0",
     "react-native-android-location-services-dialog-box": "^2.8.2",
     "react-native-animated-bar": "^0.2.0",
     "react-native-config": "^1.0.0",
