--- a/ios/Lockdown.xcodeproj/xcshareddata/xcschemes/Lockdown.xcscheme
+++ b/ios/Lockdown.xcodeproj/xcshareddata/xcschemes/Lockdown.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "Lockdown.app"
-               BlueprintName = "Lockdown"
-               ReferencedContainer = "container:Lockdown.xcodeproj">
+               BuildableName = "Covid19_lockdown.app"
+               BlueprintName = "Covid19_lockdown"
+               ReferencedContainer = "container:Covid19_lockdown.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -45,7 +45,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "LockdownTests.xctest"
                BlueprintName = "LockdownTests"
-               ReferencedContainer = "container:Lockdown.xcodeproj">
+               ReferencedContainer = "container:Covid19_lockdown.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -63,7 +63,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "LockdownTests.xctest"
                BlueprintName = "LockdownTests"
-               ReferencedContainer = "container:Lockdown.xcodeproj">
+               ReferencedContainer = "container:Covid19_lockdown.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Lockdown.app"
-            BlueprintName = "Lockdown"
-            ReferencedContainer = "container:Lockdown.xcodeproj">
+            BuildableName = "Covid19_lockdown.app"
+            BlueprintName = "Covid19_lockdown"
+            ReferencedContainer = "container:Covid19_lockdown.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Lockdown.app"
-            BlueprintName = "Lockdown"
-            ReferencedContainer = "container:Lockdown.xcodeproj">
+            BuildableName = "Covid19_lockdown.app"
+            BlueprintName = "Covid19_lockdown"
+            ReferencedContainer = "container:Covid19_lockdown.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Lockdown.app"
-            BlueprintName = "Lockdown"
-            ReferencedContainer = "container:Lockdown.xcodeproj">
+            BuildableName = "Covid19_lockdown.app"
+            BlueprintName = "Covid19_lockdown"
+            ReferencedContainer = "container:Covid19_lockdown.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
