--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,8 +1,8 @@
 platform :ios, '9.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-target 'Lockdown' do
-  # Pods for Lockdown
+target 'Covid19_lockdown' do
+  # Pods for Covid19_lockdown
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
   pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
   pod 'RCTRequired', :path => "../node_modules/react-native/Libraries/RCTRequired"
@@ -43,10 +43,10 @@ target 'Lockdown' do
   use_native_modules!
 end
 
-target 'Lockdown-tvOS' do
-  # Pods for Lockdown-tvOS
+target 'Covid19_lockdown-tvOS' do
+  # Pods for Covid19_lockdown-tvOS
 
-  target 'Lockdown-tvOSTests' do
+  target 'Covid19_lockdown-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
