--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-google-maps-directions": "^2.1.1",
+    "react-native-google-sign-in": "1.0.16",
     "react-native-image-picker": "^2.3.1",
     "react-native-maps": "0.27.1",
     "react-native-permissions": "^2.0.10",
