--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         minSdkVersion = 16
         compileSdkVersion = 29
         targetSdkVersion = 29
-        googlePlayServicesAuthVersion = "16.0.1" // <--- use this version or newer
+        googlePlayServicesAuthVersion = "16.0.1" 
     }
     repositories {
         google()
@@ -14,8 +14,9 @@ buildscript {
     }
     dependencies {
         classpath("com.android.tools.build:gradle:3.4.2")
-        classpath('com.android.tools.build:gradle:3.1.2') // <--- use this version or newer
-        classpath('com.google.gms:google-services:4.2.0') // <--- use this version or newer
+        classpath('com.android.tools.build:gradle:3.1.2') 
+        classpath('com.google.gms:google-services:4.3.3') 
+        classpath('com.google.firebase:firebase-crashlytics-gradle:2.0.0-beta03')
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
