--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -84,6 +84,8 @@ project.ext.react = [
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
+apply from: "../../node_modules/react-native-code-push/android/codepush.gradle"
+
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -211,6 +213,8 @@ dependencies {
     implementation "com.google.firebase:firebase-database:17.0.0"
     implementation 'com.google.firebase:firebase-analytics:17.2.3'
     implementation 'com.google.firebase:firebase-crashlytics:17.0.0-beta02'
+
+    
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
