--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/google-signin": "^4.0.0",
     "@react-native-community/slider": "^2.0.9",
+    "appcenter": "3.0.1",
+    "appcenter-analytics": "3.0.1",
+    "appcenter-crashes": "3.0.1",
     "crossroads": "^0.12.2",
     "geojson": "^0.5.0",
     "haversine-distance": "^1.2.1",
@@ -27,6 +30,7 @@
     "react-native-android-location-enabler": "^1.1.0",
     "react-native-android-location-services-dialog-box": "^2.8.2",
     "react-native-animated-bar": "^0.2.0",
+    "react-native-code-push": "^6.1.1",
     "react-native-config": "^1.0.0",
     "react-native-fbsdk": "^1.1.2",
     "react-native-firebase": "^5.6.0",
