--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/google-signin": "^4.0.0",
     "@react-native-community/slider": "^2.0.9",
+    "@sentry/react-native": "^1.3.6",
     "appcenter": "3.0.1",
     "appcenter-analytics": "3.0.1",
     "appcenter-crashes": "3.0.1",
